Updated by task 'AutomatedMDTask_1630361067749_TM-MT_1630361075829'

--- a/help/home/c-release-notes-insight/c-6-4/c-6-4.md
+++ b/help/home/c-release-notes-insight/c-6-4/c-6-4.md
@@ -1,21 +1,20 @@
 ---
-description: As notas de versão da Data Workbench 6.4 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
+description: As notas de versão do Data Workbench 6.4 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
 title: Notas de versão do Data Workbench 6.4
 uuid: da2f752c-6857-4565-93ba-8761ac6a09fd
-translation-type: tm+mt
-source-git-commit: a276b16565634fea9b693206c8a55b528fada977
+exl-id: b37535da-ea37-49a3-a695-81cef68a5dd4
+source-git-commit: 232117a8cacaecf8e5d7fcaccc5290d6297947e5
 workflow-type: tm+mt
-source-wordcount: '1698'
+source-wordcount: '1694'
 ht-degree: 36%
 
 ---
 
-
 # Notas de versão do Data Workbench 6.4{#data-workbench-release-notes}
 
-As notas de versão da Data Workbench 6.4 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
+As notas de versão do Data Workbench 6.4 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
 
-Para visualização de recursos e correções anteriores de versões anteriores, consulte o arquivo [de notas de](https://docs.adobe.com/content/help/pt-BR/data-workbench/using/release-notes/release-notes.html)versão.
+Para visualizar recursos e correções anteriores de versões anteriores, consulte o [arquivo de notas de versão](https://experienceleague.adobe.com/docs/data-workbench/using/release-notes/release-notes.html).
 
 ## Novos recursos {#section-e844b52c18484e99bdda5c361402247d}
 
@@ -23,42 +22,42 @@ A Data Workbench 6.4 inclui estes novos recursos:
 
 | Recursos do DWB 6.4 | Descrição |
 |--- |--- |
-| [Exportar para os serviços principais do Analytics](/help/home/c-release-notes-insight/c-6-4/dwb-crs-integration.md) | O recurso de exportação CRS (Customer Record Service) permite exportar dados de Data Workbench da Tabela de detalhes para os Adobe Analytics Core Services para integração com outros recursos do Analytics, incluindo Relatórios e análises. |
+| [Exportar para os serviços principais do Analytics](/help/home/c-release-notes-insight/c-6-4/dwb-crs-integration.md) | O recurso de exportação CRS (Customer Record Service) permite exportar os dados da Data Workbench da Tabela de detalhes para os Serviços principais da Adobe Analytics para integrar com outros recursos do Analytics, incluindo Reports &amp; Analytics. |
 | [Assistente de configuração da estação de trabalho](/help/home/c-install-insight/install-setup/dwb-client-installer.md) | Configure a Data Workbench (cliente) usando um assistente de instalação passo a passo. Baixe, configure as opções, instale o workbench e sincronize com os servidores. |
-| Experiência de configuração da estação de trabalho aprimorada | Após a instalação da estação de trabalho, a área de trabalho Configurar conexões com o servidor será aberta com informações adicionais sobre como inserir informações de conexão do servidor no arquivo Insight.cfg. Também é possível visualizar o status da conexão aos seus servidores e selecionar perfis. |
+| Experiência de configuração da estação de trabalho aprimorada | Após a instalação da estação de trabalho, o espaço de trabalho Configurar conexões ao servidor será aberto com informações adicionais sobre como inserir informações de conexão do servidor no arquivo Insight.cfg. Também é possível visualizar o status da conexão aos seus servidores e selecionar perfis. |
 | [Camada de apresentação](/help/home/c-get-started/c-vis/c-present-layer.md) | Anote e esclareça as visualizações usando uma sobreposição da apresentação. Adicione chamadas de texto, setas, imagens e codificação por cores para destacar e esclarecer seus dados e, então, compartilhar com outras pessoas. |
 | [Assistente de atenuação de métrica](/help/home/c-get-started/c-vis/dwb-create-metricdim/dwb-create-metricdim.md) | Use um assistente passo a passo para ajudar a criar dimensões de métrica. |
 | [Administração do usuário de acesso do membro do grupo](/help/home/c-inst-svr/c-admin-inst-svr/c-config-acs-ctrl/dwb-self-admin-member-access.md) | Os administradores podem conferir aos usuários da estação de trabalho a capacidade parcial de gerenciar o controle de acesso para grupos personalizados. |
-| [Bloquear perfis na estação de trabalho](/help/home/c-get-started/c-admin-intrf/c-prof-mgr/dwb-profile-lock.md) | Você pode impedir que os perfis sejam substituídos por usuários que trabalham nos gerentes de Perfis, Dimension, Relatórios, Espaços de trabalho, Métricas ou Filtros. No Gerenciador de Perfis, salve o arquivo Internal.cfg em um perfil personalizado para evitar que vários arquivos de perfil no sistema sejam substituídos no servidor. |
-| [Novos recursos da interface do usuário](/help/home/c-adobe-data-workbench-dashboard/t-getting-started/c-dashboard-user-interface.md) | A Data Workbench 6.4 adiciona novos ícones de espaço de trabalho, dicas de ferramentas, telas de apresentação e um atalho F1 à ajuda. Ela permite abrir seus arquivos de log selecionando Ajuda > Diretório Open Trace na barra de ferramentas. |
-| Algoritmo de Clustering atualizado | Maximização da expectativa adicionada ao recurso Cluster. Este é um recurso do Adobe Analytics Premium. |
+| [Bloquear perfis na estação de trabalho](/help/home/c-get-started/c-admin-intrf/c-prof-mgr/dwb-profile-lock.md) | Você pode impedir que os perfis sejam substituídos por usuários que trabalham nos gerenciadores de Perfil, Dimension, Relatórios, Espaços de trabalho, Métricas ou Filtros. No Gerenciador de perfis, salve o arquivo Internal.cfg em um perfil personalizado para evitar que vários arquivos de perfil no seu sistema sejam substituídos no servidor. |
+| [Novos recursos da interface do usuário](/help/home/c-adobe-data-workbench-dashboard/t-getting-started/c-dashboard-user-interface.md) | A Data Workbench 6.4 adiciona novos ícones do espaço de trabalho, dicas de ferramenta, telas iniciais e um atalho F1 para a ajuda. Ela permite abrir seus arquivos de log selecionando Ajuda > Diretório Open Trace na barra de ferramentas. |
+| Algoritmo de Clustering atualizado | Maximização de expectativa adicionada ao recurso Cluster. Este é um recurso do Adobe Analytics Premium. |
 | Informações de logon atualizadas | Agora, a análise de big data usa uma estrutura de logon expandida &quot;L4&quot; que oferece a capacidade de configurar o logon de acordo com a necessidade. A implementação padrão que vem com o pacote 6.4 oferece informações fundamentais sobre o processamento de software. O logon pode ser expandido com outras informações para resolver problemas dos eventos do servidor e ajudar a analisar problemas subjacentes, incluindo informações adicionais para o servidor associado, cliente e servidor de relatório. Para obter mais suporte na implementação do logon L4 adicional, entre em contato com seu gerente de conta. |
 | Novo arquivo cfg para opções de logon de ExportIntegration.exe | Um novo arquivo de configuração de httpLoggingEI.cfg (localizado em server\Admin\Export\httpLoggingEI.cfg) permite interromper o logon de INFO para o arquivo HTTP.log durante as exportações da Integração de exportação. (As exportações de CRS, TNT e MMP já capturam o logon prolixo nos arquivos de log de exportação individuais.)  Uma configuração verdadeira inicia o logon INFO (para testes e relatórios detalhados) no arquivo HTTP.log e uma configuração falsa interrompe o logon prolixo. Para uma configuração falsa, somente mensagens de nível AVISO/ERRO serão enviadas para o arquivo HTTP.log. |
-| Recurso de zoom para visualizações de gráfico | Use o recurso de zoom para obter uma melhor exibição dos rótulos de métricas quando os valores atingirem uma diferença maior. Antes, o rótulo desaparecia com a mudança no contaste de valores. Por exemplo, ao configurar um valor maior de regressão da métrica em relação a valores anteriores. You can now zoom in to the visualization by clicking **Ctrl** and moving the mouse wheel while hovering over the graph. |
+| Recurso de zoom para visualizações de gráfico | Use o recurso de zoom para obter uma melhor exibição dos rótulos de métricas quando os valores atingirem uma diferença maior. Antes, o rótulo desaparecia com a mudança no contaste de valores. Por exemplo, ao configurar um valor maior de regressão da métrica em relação a valores anteriores. Agora é possível ampliar a visualização clicando em **Ctrl** e movendo o mouse e passando o cursor sobre o gráfico. |
 | Nova ferramenta Seletor de cores | O novo seletor de cores permite escolher as cores em uma paleta de cores simples, ou selecionar a guia Avançado para escolher em uma escala de gradação ou inserir seus próprios valores de RGB. |
 | Os localizadores agora exportam mais informações meta | Mais informações meta são fornecidas ao exportar dimensões e métricas do Localizador. A saída do Localizador de métricas agora inclui Nome e Fórmula.  A saída do Localizador de dimensões inclui Nome, Tipo e Pai. |
 | Insight.exe e InsightSetup.exe agora são assinados digitalmente | Esses executáveis agora são assinados digitalmente para assegurar que os downloads de software não tenham sido alterados ou corrompidos. |
 | Opções de formato de data | É possível alterar o formato de data com base na sua localidade no arquivo de tempo padrão Dimensions.cfg. Altere o formato padrão MM/DD/AAAA para o formato DD/MM/AAAA ou escolha outras opções. |
-| Visualização de arquivos dividida | A visualização de arquivos (Admin > Arquivos) para perfis de base não incluirá diretórios maiores (Logs, Exportações e Consultas removidos) nos relatórios. Isso aumentará a velocidade de exibição do relatório.  Os diretórios maiores agora têm seus próprios relatórios individuais (Admin / Arquivos de exportação, Arquivos de pesquisa e Arquivos de registro). |
-| Atlas de dispositivo com cache em memória | O arquivo DeviceAtlas.bundle agora usa memória cache para melhorar consideravelmente o desempenho das consultas. |
+| Visualização de arquivos dividida | A visualização de arquivos (Admin > Arquivos) para perfis de base não incluirá diretórios maiores (Logs, Exportações e Consultas removidos) nos relatórios. Isso aumentará a velocidade de exibição do relatório.  Os diretórios maiores agora têm seus próprios relatórios individuais ( Admin / Arquivos de exportação, Arquivos de pesquisa e Arquivos de log). |
+| Atlas do dispositivo com cache na memória | O arquivo DeviceAtlas.bundle agora usa memória cache para melhorar consideravelmente o desempenho das consultas. |
 | Visualização de Corda atualizada | Melhor visibilidade ao passar o cursor sobre uma seção durante a exibição da visualização de Corda. |
 | Arraste dimensões de Localizações para uma Tabela de detalhes | Na estação de trabalho, agora é possível arrastar as dimensões do painel Localizador diretamente para a Tabela de detalhes em um espaço de trabalho. |
 
 >[!NOTE]
 >
->Você pode desativar os ícones na barra de ferramentas e retornar aos nomes do texto. Adicione o **[!DNL Toolbar Icons = bool: false]** parâmetro ao arquivo [](https://docs.adobe.com/content/help/en/data-workbench/using/client/c-insght-config-param.html)Insight.cfg. False desativa os ícones na interface do usuário da estação de trabalho e exibe os nomes dos menus no texto na barra de ferramentas.
+>Você pode desativar os ícones na barra de ferramentas e retornar aos nomes do texto. Adicione o parâmetro **[!DNL Toolbar Icons = bool: false]** [ao arquivo Insight.cfg](https://experienceleague.adobe.com/docs/data-workbench/using/client/c-insght-config-param.html). False desativa os ícones na interface do usuário da estação de trabalho e exibe os nomes dos menus no texto na barra de ferramentas.
 
-## Atlas de dispositivo com cache em memória{#device-atlas-with-in-memory-cache}
+## Atlas do dispositivo com cache na memória{#device-atlas-with-in-memory-cache}
 
-O arquivo DeviceAtlas.bundle agora usa um cache na memória para melhorar consideravelmente o desempenho de pesquisas
+O arquivo DeviceAtlas.bundle agora usa um cache na memória para melhorar muito o desempenho das pesquisas
 
-Por padrão, o Device Atlas armazenará em cache até 100.000 agentes do usuário e suas propriedades. O cache LRU é totalmente autocontido dentro do DeviceAtlas.bundle, de modo que qualquer versão do servidor capaz de usar um arquivo de pacote se beneficiará automaticamente do aumento de desempenho assim que o novo arquivo for carregado.
+Por padrão, o Device Atlas armazenará em cache até 100.000 agentes do usuário e suas propriedades. O cache LRU é totalmente autocontido dentro do DeviceAtlas.bundle, portanto, qualquer versão do servidor capaz de usar um arquivo de pacote se beneficiará automaticamente do aumento de desempenho assim que o novo arquivo for carregado.
 
-**Modificando o arquivo DeviceAtlas.cfg**
+**Modificação do arquivo DeviceAtlas.cfg**
 
-O tamanho máximo do cache LRU pode ser configurado modificando o parâmetro Limite de elementos em cache no arquivo DeviceAtlas.cfg.
+O tamanho máximo do cache LRU pode ser configurado modificando o parâmetro Limite de elementos em cache no arquivo DeviceAtlas.cfg .
 
-A partir da versão 6.4 da Data Workbench, é possível substituir o Limite de Elementos em Cache padrão de &quot;100000&quot; alterando seu valor e salvando o arquivo. O valor padrão foi selecionado para ser suficiente para a maioria das necessidades.
+A partir da versão 6.4 do Data Workbench, é possível substituir o limite padrão de Elementos em Cache de &quot;100000&quot; alterando seu valor e salvando o arquivo. O valor padrão foi selecionado para ser suficiente para a maioria das necessidades.
 
 ```
 component = DeviceAtlasComponent: 
@@ -74,29 +73,29 @@ Siga estes requisitos e recomendações ao atualizar para a Data Workbench 6.4.
 
 >[!IMPORTANT]
 >
->É recomendável usar os arquivos de configuração padrão recém-instalados e personalizá-los, em vez de mover arquivos de uma instalação anterior — com as seguintes exceções:
+>Recomenda-se usar os arquivos de configuração padrão recém-instalados e personalizá-los, em vez de mover os arquivos de uma instalação anterior — com estas exceções:
 
-* **Adicione** processos ****** excluídos para o *MS System Center Endpoint Protection nos servidores* Windows 2012 para os seguintes executáveis:
+* **** ***AddExcluded*** Processes for  *MS System Center Endpoint Protection in Windows 2012* Server para os seguintes executáveis:
 
    * **`InsightServer64.exe`**
    * **`ReportServer.exe`**
    * **`ExportIntegration.exe`**
 
-   Isso permitirá direitos de lista branca para esses executáveis de interface.
+   Isso permitirá direitos de lista de permissões para esses executáveis de interface.
 
-* **Atualize o *`Trust_ca_cert.pem`*certificado nos servidores**.
-* **Reorganização de Perfis** de Atribuição.
+* **Atualize o  *`Trust_ca_cert.pem`* certificado nos servidores**.
+* **Reorganização de perfis de atribuição**.
 
-   * A pasta *Atribuição* foi renomeada para ***Atribuição - Premium*** (encontrada na instalação padrão nos *Perfis* \ *Atribuição - Premium*).
+   * A pasta *Attribution* foi renomeada para ***Attribution - Premium*** (encontrada na instalação padrão em *Profiles* \ *Attribution - Premium*).
 
-   * O perfil *Premium* foi removido e o espaço de trabalho foi movido para a nova pasta ***Atribuição - Premium*** .
+   * O perfil *Premium* foi removido e o espaço de trabalho foi movido para a nova pasta ***Atribuição - Premium***.
 
-* **Atualize as configurações *de Atribuição-Premium***. Se você personalizou perfis com configurações de parâmetro que substituem o perfil *Adobe SC* padrão, é necessário atualizar os campos personalizados nesses arquivos de configuração:
+* **Atualize  *Attribution-* Premium**. Se você tiver personalizado perfis com configurações de parâmetro que substituem o perfil padrão *Adobe SC*, será necessário atualizar os campos personalizados nesses arquivos de configuração:
 
    * **`Decoding Instructions.cfg`**
    * **`SC Fields.cfg`**
 
-* Devido a essa reorganização, você desejará remover as antigas pastas *Atribuição* e *Premium* da instalação do servidor.
+* Devido a essa reorganização, você desejará remover as pastas antigas *Attribution* e *Premium* da instalação do servidor.
 
    **Alterar estas definições**
 
@@ -125,11 +124,11 @@ Siga estes requisitos e recomendações ao atualizar para a Data Workbench 6.4.
        4 = string: Attribution - Premium\\
    ```
 
-* **Atualize os arquivos** personalizados Meta.cfg (se necessário).
+* **Atualize os arquivos Meta.cfg personalizados**  (se necessário).
 
-   Os **`Meta.cfg`** arquivos em **`Base\Context and AdobeSC\Context`** pastas foram atualizados nesta versão.
+   Os arquivos **`Meta.cfg`** nas pastas **`Base\Context and AdobeSC\Context`** foram atualizados nesta versão.
 
-   Se você substituir o arquivo **meta.cfg** durante a instalação, a cópia do perfil precisará ser atualizada com esses parâmetros e o vetor **de** metadados inserido adequadamente:
+   Se você substituir o arquivo **meta.cfg** durante a instalação, sua cópia de perfil precisará ser atualizada com esses parâmetros e o **vetor de metadados** inserido adequadamente:
 
    ```
    94 = meta: 
@@ -150,9 +149,9 @@ Siga estes requisitos e recomendações ao atualizar para a Data Workbench 6.4.
          value = string:
    ```
 
-* **Defina permissões** do Servidor de Relatório para gerar relatórios do Microsoft Excel em servidores Windows 2012.
+* **Configure** permissões do Servidor de Relatórios para gerar relatórios do Microsoft Excel em servidores Windows 2012.
 
-   1. Defina a permissão da pasta raiz (**`E:\ReportServer\`**) como *Todos = controle* total.
+   1. Defina a permissão da pasta raiz (**`E:\ReportServer\`**) para *Todos = controle total*.
    1. Crie as seguintes pastas com as permissões apropriadas:
 
       ```
@@ -164,11 +163,11 @@ Siga estes requisitos e recomendações ao atualizar para a Data Workbench 6.4.
 
       >[!NOTE]
       >
-      >Se você estiver executando o Servidor de relatórios no Windows Server 2012, precisará ter o Windows Server 2012 R2 instalado.
+      >Se você estiver executando o Report Server no Windows Server 2012, precisará ter o Windows Server 2012 R2 instalado.
 
-   1. Atribua &quot;SYSTEM&quot; como proprietário para estas pastas.
+   1. Atribua &quot;SYSTEM&quot; como proprietário para essas pastas.
 
-* **Adicionar fontes ao Servidor de relatórios.** No arquivo **`ReportServer.cfg`**s, adicione estas fontes (para todos os idiomas):
+* **Adicionar fontes ao servidor de relatórios.** No arquivo **`ReportServer.cfg`**, adicione essas fontes (para todos os idiomas):
 
    ```
    Fonts = vector: 3 items 
@@ -177,14 +176,14 @@ Siga estes requisitos e recomendações ao atualizar para a Data Workbench 6.4.
      2 = string: MS Mincho
    ```
 
-* **Atualize sua versão do Microsoft Excel** (se necessário).
+* **Atualize sua versão do Microsoft Excel**  (se necessário).
 
-   Com o lançamento da Data Workbench 6.4, o suporte ao Excel 2007 foi descontinuado. Além disso, como a Data Workbench só é executada no Microsoft Windows para arquitetura de 64 bits, recomenda-se instalar uma versão de 64 bits do Microsoft Excel.
+   Com o lançamento do Data Workbench 6.4, o suporte para Excel 2007 foi descontinuado. Além disso, como o Data Workbench só é executado no Microsoft Windows para arquitetura de 64 bits, é recomendável também instalar uma versão de 64 bits do Microsoft Excel.
 
-* **Arquitetura** de 64 bits necessária para a instalação da Workstation (Cliente).
-* **Execute o Assistente** de configuração da estação de trabalho.
+* **Arquitetura de 64 bits** necessária para instalação de Workstation (cliente).
+* **Execute o Assistente de configuração da estação de trabalho**.
 
-   Instale a nova versão da estação de trabalho (cliente) baixando e iniciando o ***InsightSetup.exe*** e seguindo as instruções de configuração. Por padrão, o assistente de instalação instalará seus arquivos em um novo local:
+   Instale a nova versão da estação de trabalho (cliente) baixando e iniciando ***InsightSetup.exe*** e seguindo as instruções de configuração. Por padrão, o assistente de configuração instalará seus arquivos em um novo local:
 
    Os arquivos de programa agora são salvos por padrão em:
 
@@ -192,15 +191,15 @@ Siga estes requisitos e recomendações ao atualizar para a Data Workbench 6.4.
    C:\Program Files\Adobe\Adobe Analytics\Data Workbench
    ```
 
-   Os arquivos de dados (perfis, certificados, registros de rastreamento e arquivos de usuário) agora são salvos por padrão para:
+   Os arquivos de dados (perfis, certificados, logs de rastreamento e arquivos de usuário) agora são salvos por padrão em:
 
    ```
    C:\Users\<username>\AppData\Local\Adobe\Adobe Analytics\Data Workbench\
    ```
 
-* **Adicione fontes à estação de trabalho**.
+* **Adicionar fontes à estação de trabalho**.
 
-   No **`Insight.cfg`** arquivo, adicione essas fontes (para todos os idiomas):
+   No arquivo **`Insight.cfg`**, adicione essas fontes (para todos os idiomas):
 
    ```
    Fonts = vector: 3 items 
@@ -214,32 +213,32 @@ Siga estes requisitos e recomendações ao atualizar para a Data Workbench 6.4.
 Esses recursos foram renomeados, excluídos ou os arquivos ou pastas de instalação foram reestruturados nesta versão:
 
 * A pasta **Base.zip** não está mais incluída no pacote de atualização da versão.
-* The **DeviceAtlas.bundle** file now uses an in-memory cache to improve the performance of lookups.
-* No arquivo **Log Processing.cfg** , o parâmetro *Chunk Size* em *Log Sources* foi removido.
-* No arquivo **Disk Files.cfg** , o parâmetro *Detect Disk Corrupt (Detectar corrupção* de disco) foi removido nos seguintes locais:
+* O arquivo **DeviceAtlas.bundle** agora usa um cache na memória para melhorar o desempenho das pesquisas.
+* No arquivo **Log Processing.cfg**, o parâmetro *Tamanho do bloco* em *Fontes de log* foi removido.
+* No arquivo **Disk Files.cfg**, o parâmetro *Detect Disk Corrupt* foi removido nestes locais:
 
 `\server\components\disk files.cfg`
 
 `\server\components for processing servers\disk files.cfg`
 
-* Novas descrições de serviço para os Serviços *da* Adobe Analytics Premium e para os Serviços *de Relatório da* Adobe Analytics Premium nas propriedades executáveis.
-* O recurso Exportação *de Perfil de Marketing* Principal na Tabela de Detalhes foi renomeado para ***Perfis e Audiência Export***.
-* O recurso *Testar e exportar* Público alvo na Tabela de detalhes foi renomeado para ***Adobe Target Export***.
+* Novas descrições de serviço para *Adobe Analytics Premium Services* e para *Adobe Analytics Premium Report Services* nas propriedades executáveis.
+* O recurso *Exportação de perfil de marketing Principal* na Tabela de detalhes foi renomeado para ***Exportação de perfis e públicos***.
+* O recurso *Exportação de teste e destino* na Tabela de detalhes foi renomeado para ***Exportação de Adobe Target***.
 
 ## Erros corrigidos {#section-bcdd732af53249b893d30bb42eeb14fc}
 
-As seguintes correções foram feitas na Data Workbench 6.4 (desde o lançamento da Data Workbench 6.31).
+As seguintes correções foram feitas na Data Workbench 6.4 (desde o lançamento do Data Workbench 6.31).
 
-* A pontuação de propensão não era redefinida ao executar entradas diferentes no mesmo espaço de trabalho. Agora, a redefinição ocorre corretamente.
-* Nenhuma dimensão contável disponível ao abrir a Matriz de correlação foi corrigida.
-* A exportação de segmentos de Públicos alvos falhava porque o campo mboxPC estava ausente. Isso agora foi corrigido.
-* A solicitação de ID foi formatada corretamente. Utilizar a mbox3rdpartyId identification instead of default PCIDs caused Adobe Target to reject requests generated via the Target/Data Workbench integration (using the **`ExportIntegration.exe`**). Essa solicitação de ID agora está sendo formatada corretamente e o resultado é bem-sucedido.
-* O vazamento de memória do Servidor de Relatório ao exportar para Excel foi corrigido.
+* A pontuação de propensão não era redefinida ao executar entradas diferentes novamente no mesmo espaço de trabalho. Agora, a redefinição ocorre corretamente.
+* Nenhuma dimensão contável disponível ao abrir a Matriz de correlação pela primeira vez foi corrigida.
+* A exportação de segmentos do Target falhava porque o campo mboxPC estava ausente. Isso agora foi corrigido.
+* A solicitação de ID foi formatada corretamente. Utilizar a A identificação da mbox3rdpartyId em vez dos PCIDs padrão fazia com que o Adobe Target rejeitasse solicitações geradas pela integração Target/Data Workbench (usando o **`ExportIntegration.exe`**). Essa solicitação de ID agora está sendo formatada corretamente e o resultado é bem-sucedido.
+* Correção de vazamento de memória do Servidor de Relatório ao exportar para Excel.
 
 ## Problemas conhecidos {#section-d0cd72e82d1444a2b069dfcda5d7692a}
 
 As restrições a seguir são conhecidas na Data Workbench 6.4.
 
-* **`ExportIntegration.exe`**   requer argumentos de linha de comando em inglês. The output file name should be named in English for *Adobe Target Export*, *Profiles and Audiences Export*, and *Customer Record Service Export*.
-* Em *Perfis e exportação* de Audiência, inserir caracteres não autorizados (`[CR]` ou `[TAB]`) como nomes de colunas gera registros incorretos, resultando na não exportação correta de dados.
-* Em versões em chinês e japonês, pode ser encontrado um problema de codificação de caracteres Unicode no Navegador de caminhos.
+* **`ExportIntegration.exe`**   requer argumentos de linha de comando em inglês. O nome do arquivo de saída deve ser em inglês para *Adobe Target Export*, *Profiles and Audiences Export* e *Customer Record Service Export*.
+* No *Profiles and Audience Export*, inserindo caracteres não autorizados (`[CR]` ou `[TAB]`), conforme os nomes das colunas gera registros incorretos, resultando na exportação incorreta de dados.
+* Em versões em chinês e japonês, o problema de codificação de caracteres Unicode pode ser encontrado no Navegador de caminhos.
