--- a/help/home/c-release-notes-insight/c-6-6.md
+++ b/help/home/c-release-notes-insight/c-6-6.md
@@ -1,115 +1,117 @@
 ---
-description: As notas de versão do Análise de big data 6.6 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
-title: Notas de versão do Análise de big data 6.6
+description: As notas de versão do Data Workbench 6.6 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
+title: Notas de versão do Data Workbench 6.6
 uuid: 92833b41-f322-4768-b64d-08c17c87f4e1
-translation-type: tm+mt
-source-git-commit: 2cba66a160fec9154796f093d04a422a5b0da265
+exl-id: 62c39c5f-6668-4c43-8d12-d8d3d8af3dcf
+source-git-commit: 232117a8cacaecf8e5d7fcaccc5290d6297947e5
+workflow-type: tm+mt
+source-wordcount: '1004'
+ht-degree: 21%
 
 ---
 
+# Notas de versão do Data Workbench 6.6{#data-workbench-release-notes}
 
-# Notas de versão do Análise de big data 6.6{#data-workbench-release-notes}
+As notas de versão do Data Workbench 6.6 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
 
-As notas de versão do Análise de big data 6.6 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
+## Novos recursos {#section-e844b52c18484e99bdda5c361402247d}
 
-## Novos Recursos {#section-e844b52c18484e99bdda5c361402247d}
-
-A Análise de big data 6.6 inclui estes novos recursos:
+A Data Workbench 6.6 inclui estes novos recursos:
 
 **Seleção de recursos inteligentes**
 
-O recurso inteligente oferece seleção automatizada de recursos ao usar a visualização de Pontuação de propensão. Não é mais necessário selecionar as variáveis independentes em uma longa lista de métricas e dimensões.
+O recurso inteligente oferece seleção automatizada de recursos ao usar a visualização de Pontuação de propensão . Não é mais necessário selecionar as variáveis independentes de uma longa lista de métricas e dimensões.
 
-Select **Options > Feature** to enable the feature selection menu. If the **Feature Reduction** option is not selected, you can make the system explore additional model inputs from the entire set of metrics while retaining user-added metrics. Checking **Feature Reduction** will make the system select the most relevant metrics from the user metrics.
+Selecione **Options > Feature** para ativar o menu de seleção de recursos. Se a opção **Redução de recursos** não estiver selecionada, você poderá fazer o sistema explorar mais entradas de modelo do conjunto inteiro de métricas enquanto mantém as métricas adicionadas pelo usuário. Marcar **Redução de recursos** fará com que o sistema selecione as métricas mais relevantes nas métricas do usuário.
 
 >[!NOTE]
 >
->While using Smart Feature Selection for an empty model, **Feature Selection Settings** are redundant.
+>Ao usar a Seleção de recursos inteligentes para um modelo vazio, as **Configurações de seleção de recursos** são redundantes.
 
-A seleção de **Mais recursos** ou **Menos recursos** no menu Configuração **de** nível faz com que o algoritmo de seleção adicione conjuntos de recursos ao modelo. Em alguns casos, ambos os tipos de configuração podem retornar o mesmo modelo.
-**Assistente** de exportação de segmento A exportação de [segmento]Wizardhttps://docs.adobe.com/content/help/en/data-workbench/using/client/export-data/segment-export.html) fornece um processo passo a passo para configurar e exportar segmentos.
+Selecionar **Mais recursos** ou **Menos recursos** no menu **Configuração de nível** faz com que o algoritmo de seleção adicione conjuntos de recursos ao modelo. Em alguns casos, ambos os tipos de configuração podem retornar o mesmo modelo.
+**** Assistente de exportação de segmentoA exportação de  [segmentos ]Wizardhttps://experienceleague.adobe.com/docs/data-workbench/using/client/export-data/segment-export.html) fornece um processo passo a passo para configurar e exportar segmentos.
 
 **Novo executável de exportação para exportações do Target**
 
-Para exportar dados do Adobe Target, foi desenvolvido um novo [!DNL TargetBulkUpload.exe] a fim de substituir o [!DNL ExportIntegration.exe] nas exportações do Target. If a user wants to move legacy exports to [!DNL TargetBulkUpload.exe], then exports have to be changed (change [!DNL mbox3rdPartyId] to [!DNL thirdPartyId]).
+Para exportar dados do Adobe Target, foi desenvolvido um novo [!DNL TargetBulkUpload.exe] a fim de substituir o [!DNL ExportIntegration.exe] nas exportações do Target. Se um usuário desejar mover exportações herdadas para [!DNL TargetBulkUpload.exe], elas devem ser alteradas (altere [!DNL mbox3rdPartyId] para [!DNL thirdPartyId]).
 
 **Registro em log de L4**
 
-Uma opção para Registro **L4 foi adicionada em** menu , bem como um novo arquivo de configuração ( [!DNL Server > Admin > Export]`loggingDetails.cfg`). Isso permite ativar e desativar o logon GE e L4. Por padrão, o registro em log L4 será definido como *true* e o registro em log do GE será definido como *false* no arquivo de configuração, mas você poderá alterar essas configurações conforme necessário. Isso se aplica apenas às exportações que usam o [!DNL exportintegration.exe].
+Uma opção para **Log de L4** foi adicionada no menu [!DNL Server > Admin > Export] , bem como um novo arquivo de configuração (`loggingDetails.cfg`). Isso permite que você ative e desative o logon de GE e L4. Por padrão, o registro em log de L4 será definido como *true* e o registro em log de GE será definido como *false* no arquivo de configuração, mas você poderá alterar essas configurações conforme necessário. Isso é somente para exportações que usam o [!DNL exportintegration.exe].
 
 **Novas opções da camada de apresentação**
 
-Agora é possível definir a transparência e a espessura da borda para formas de Círculo e Retângulo na Camada de Apresentação. Right-click on the object and select **No Fill** to make it transparent. Four border thickness options are present under **Outline**—Thin, Medium, Thick, Thickest.
+Agora é possível definir a transparência e a espessura da borda de formas de Círculo e Retângulo na Camada de apresentação. Clique com o botão direito do mouse no objeto e selecione **No Fill** para torná-lo transparente. Existem quatro opções de espessura de borda em **Estrutura de Tópicos** — fina, média, espessa e mais espessa.
 
-**Novas opções para diagramas Correlação e Correlação de associação**
+**Novas opções para diagramas de Correlação e de Correspondência de Associação**
 
-Novas opções de agrupamento foram adicionadas nos diagramas Correlação Cord e Association Chord. O menu de clique com o botão direito agora inclui **Adicionar grupo**, **Remover grupo** e **Adicionar ao grupo**.
+Novas opções de agrupamento foram adicionadas nos diagramas Correlação Cord e Association Chord . O menu de contexto agora inclui **Adicionar grupo**, **Remover grupo** e **Adicionar ao grupo**.
 
-O agrupamento será exibido assim que você preencher seu acorde. Todos os elementos que fazem parte do mesmo agrupamento serão baseados na cor do grupo. Você pode definir a cor do grupo da mesma forma que definiria as cores de um elemento. Se um agrupamento for excluído, os elementos serão movidos para Não agrupados.
+O agrupamento será exibido assim que você preencher o acorde. Todos os elementos que fazem parte do mesmo agrupamento serão baseados na cor do grupo. Você pode definir a cor do grupo como definiria as cores de um elemento. Se um agrupamento for excluído, os elementos serão movidos para Não agrupados.
 
-**Definir transparência e espessura da borda para anotações**
+**Definir a transparência e a espessura da borda das anotações**
 
 Agora, você pode definir a transparência e o tamanho da borda de círculos e retângulos como [visualizações de destaque e anotação](../../home/c-get-started/c-vis/c-present-layer.md#concept-1235f55dfeb14e0898a1cbc13a827f67) em uma espaço de trabalho. As novas opções de círculo e retângulo incluem uma opção **Sem preenchimento** para configurações de transparência e espessura de borda **fina**, **média** ou **mais espessa**.
 
 **Melhorias do decodificador de XML**
 
-Agora, você pode usar a tag **#value** em caminhos de XML para obter o valor de um elemento XML. For example, you can now read the attribute value of the **`<Hit><Page name="Home Page" index="20">home.html </Page></Hit>`** tag using a **Hit.Page.#value.** Consulte [Grupos do decodificador de XML](../../home/c-dataset-const-proc/c-dataset-inc-files/c-types-dataset-inc-files/c-log-proc-dataset-inc-files/c-xml-dec-grps.md#concept-5eda5ab253724674832f6951e2a0d1c3) para obter mais informações.
+Agora, você pode usar a tag **#value** em caminhos de XML para obter o valor de um elemento XML. Por exemplo, agora você pode ler o valor do atributo da tag **`<Hit><Page name="Home Page" index="20">home.html </Page></Hit>`** usando um **Hit.Page.#value.** Consulte [Grupos do decodificador de XML](../../home/c-dataset-const-proc/c-dataset-inc-files/c-types-dataset-inc-files/c-log-proc-dataset-inc-files/c-xml-dec-grps.md#concept-5eda5ab253724674832f6951e2a0d1c3) para obter mais informações.
 
 **Novos recursos na pontuação de propensão**
 
-Within the toolbar button you can now choose to either **Save a filter** or automatically launch Propensity Scoring with a new feature selection capability. The Propensity Scoring opens the builder with the workspace selections applied for the dependent variable, enables the selected features, and lets you hit **Go** to start.
+No botão da barra de ferramentas, agora você pode optar por **Salvar um filtro** ou iniciar automaticamente a Pontuação de propensão com um novo recurso de seleção. A Pontuação de propensão abre o construtor com as seleções de espaço de trabalho aplicadas à variável dependente, ativa os recursos selecionados e permite que você pressione **Ir** para iniciar.
 
-Agora é possível salvar um Modelo de pontuação de propensão como um arquivo JavaScript. After the model is built click on **Save** > **Save JavaScript**.
+Agora é possível salvar um Modelo de pontuação de propensão como um arquivo JavaScript. Após a construção do modelo, clique em **Save** > **Save JavaScript**.
 
-**Criadores preditivos de nível de Visita adicional**
+**Criadores preditivos de nível de visita adicional**
 
 Adicionados novos construtores preditivos com Visita como a dimensão contável de raiz para Pontuação de propensão, Clustering e Árvores de decisão.
 
-**Visualizações adicionais de latência**
+**Visualizações de latência adicionais**
 
-Adicionado um conjunto de visualizações de Latência. As visualizações de latência anteriores buscavam um período igual próximo do evento (-7 a +7 dias) para criar uma atribuição. Isso funciona bem somente para um evento por clipe, mas não proporciona resultados adequados quando existem vários eventos, como diversas conversões.
+Adicionado um conjunto de visualizações de latência. As visualizações de latência anteriores buscavam um período igual próximo do evento (-7 a +7 dias) para criar uma atribuição. Isso funciona bem somente para um evento por clipe, mas não proporciona resultados adequados quando existem vários eventos, como diversas conversões.
 
-Reorganizamos e adicionamos outras visualizações de latência ao menu que são configuradas para avaliar a latência antes de um evento, depois de um evento e antes e depois de um único evento.
+Reorganizamos e adicionamos mais visualizações de latência ao menu configuradas para avaliar a latência antes de um evento, depois de um evento e antes e depois de um único evento.
 
 **Atualizações feitas a`report.cfg`**
 
-You can now view dates in calendar format in the [!DNL report.cfg] configuration tree.
+Agora você pode exibir datas no formato de calendário na árvore de configuração [!DNL report.cfg].
 
 **Atualizações de visualização de linha**
 
-Implemented the ability to scale in the [Chord Visualization](../../home/c-get-started/c-analysis-vis/c-chord-visualization.md#concept-ca600beb11674f3bb2696edf41f1dda9) and [Pie Chart](../../home/c-get-started/c-analysis-vis/c-pie-chart.md#concept-65bd6e41ee814684a7f53ea69142f21c) visualizations. You can scale by holding down `<Ctrl>` key and using the mouse wheel, or by right-clicking on the window border, selecting a value to scale, and entering a value.
+Implementação da capacidade de dimensionar nas visualizações [Exibição de corda](../../home/c-get-started/c-analysis-vis/c-chord-visualization.md#concept-ca600beb11674f3bb2696edf41f1dda9) e [Gráfico de pizza](../../home/c-get-started/c-analysis-vis/c-pie-chart.md#concept-65bd6e41ee814684a7f53ea69142f21c). Você pode dimensionar mantendo a tecla `<Ctrl>` pressionada e usando o mouse, ou clicando com o botão direito do mouse na borda da janela, selecionando um valor a ser dimensionado e inserindo um valor.
 
 **Acesso ao status detalhado**
 
-O sensor 5.0 suporta:
+O sensor 5.0 é compatível com:
 
 * Certificados de 2048 bits assinados usando SHA256.
-* Suporte para o Apache Server 2.4 em Linux, Sun Solaris ou FreeBSD
+* Suporte para o Apache Server 2.4 no Linux, Sun Solaris ou FreeBSD
 * Suporte para o Apache Server 2.4 no Windows Server 2000 ou posterior
 
-Access to **Detailed Status** is now restricted to Power Users and Administrators by default.
+O acesso a **Status Detalhado** agora está restrito aos Usuários avançados e Administradores por padrão.
 
 ## Atualizações do sistema {#section-bcdd732af53249b893d30bb42eeb14fc}
 
 Esses recursos foram renomeados, excluídos ou os arquivos ou pastas de instalação foram reestruturados nesta versão:
 
-* A extensão padrão para um **[!DNL reportserver.cfg]** arquivo agora é **.xlsx**.
+* A extensão padrão para um arquivo **[!DNL reportserver.cfg]** agora é **.xlsx**.
 
-* Adições ao **Insight.cfg** (a árvore de configuração).
+* Adições a **Insight.cfg** (a árvore de configuração).
 
-   * printf format: You can now set the `printf` format from the **Insight.cfg** tree.
+   * formato printf: Agora você pode definir o formato `printf` a partir da árvore **Insight.cfg**.
 
-   * V3D: Agora é possível definir uma configuração V3D usando três caixas de edição associadas.
-   * Data e hora: Agora é possível definir a data e a hora a partir de um menu suspenso.
+   * V3D: Agora você pode definir uma configuração V3D usando três caixas de edição associadas.
+   * Data e hora: Agora é possível definir a data e a hora em um menu suspenso.
 
-* O recurso Sobreposição de página foi removido do menu de opções de um elemento de tabela de URL. Se você tiver um espaço de trabalho mais antigo com uma visualização de sobreposição de página e clicar na opção de menu **Atualizar página** , uma caixa de diálogo será exibida informando: *Este recurso foi descontinuado devido a questões* de segurança.
+* O recurso Sobreposição de página foi removido do menu de opções de um elemento de tabela de URL. Se você tiver um espaço de trabalho mais antigo com uma visualização de sobreposição de página e clicar na opção de menu **Atualizar página**, uma caixa de diálogo será exibida informando: *Este recurso foi preterido devido a preocupações de segurança*.
 
 ## Erros corrigidos {#section-3c47f9177e9d40d8938a5710399dc88f}
 
-As correções a seguir são importantes feitas na Análise de big data 6.6 (desde o lançamento da Análise de big data 6.52).
+As correções de destaque a seguir foram feitas na Data Workbench 6.6 (desde o lançamento do Data Workbench 6.52).
 
-* Corrigir para a Atribuição de melhor ajuste (atribuição algorítmica): Os coeficientes eram todos zeros quando o SGD era usado para convergir. Isso foi corrigido.
+* Correção da atribuição de melhor ajuste (atribuição algorítmica): Os coeficientes eram todos zeros quando o SGD era usado para convergir. Esse erro foi corrigido.
 
 ## Problemas conhecidos {#section-350ae121ca3442babbef4d0a2b027df1}
 
-* The **[!DNL targetbulkupload.exe]** requires command-line arguments in English. O nome do arquivo de saída deve estar em inglês para o Adobe Target Export, Perfis e Públicos-alvo Exportar e Customer Record Service Export.
+* O **[!DNL targetbulkupload.exe]** requer argumentos de linha de comando em inglês. O nome do arquivo de saída deve estar em inglês para exportação do Adobe Target, exportação de perfis e públicos e exportação do Serviço de registro do cliente.
