--- a/help/home/c-release-notes-insight/c-6-2-1.md
+++ b/help/home/c-release-notes-insight/c-6-2-1.md
@@ -1,25 +1,27 @@
 ---
-description: O Análise de big data 6.2.1 fornece novos recursos e correções de erros.
-title: Atualização 6.21 da Análise de big data
+description: A Data Workbench 6.2.1 fornece novos recursos e correções de erros.
+title: Atualização do Data Workbench 6.21
 uuid: 0ce71b03-ada5-45fd-9659-0403bedbd2dd
-translation-type: tm+mt
-source-git-commit: 82e8eb0e239d3e3c7c686236a459bd557aec96fe
+exl-id: ccb8217b-7873-4391-b01b-02ca62f83a0a
+source-git-commit: 232117a8cacaecf8e5d7fcaccc5290d6297947e5
+workflow-type: tm+mt
+source-wordcount: '421'
+ht-degree: 50%
 
 ---
 
+# Atualização do Data Workbench 6.21{#data-workbench-update}
 
-# Atualização 6.21 da Análise de big data{#data-workbench-update}
+A Data Workbench 6.2.1 fornece novos recursos e correções de erros.
 
-O Análise de big data 6.2.1 fornece novos recursos e correções de erros.
+## Novos recursos {#section-1aacfe9a6a964c91b1d24fc1b181db34}
 
-## Novos Recursos {#section-1aacfe9a6a964c91b1d24fc1b181db34}
-
-O Análise de big data 6.2.1 inclui estes novos recursos:
+A Data Workbench 6.2.1 inclui estes novos recursos:
 
 <table id="table_E28A6D31E7D941F7A0C2048F0F0F7838"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> Recursos  </th> 
+   <th colname="col1" class="entry"> Recursos </th> 
    <th colname="col2" class="entry"> Descrição </th> 
   </tr> 
  </thead>
@@ -30,7 +32,7 @@ O Análise de big data 6.2.1 inclui estes novos recursos:
   </tr> 
   <tr> 
    <td colname="col1"> Classificação de miniaturas na mesa de trabalho </td> 
-   <td colname="col2"> Os nomes classificados na área de trabalho agora são insensíveis ao caso do caractere, classificando alfabeticamente AaBbCcDd em vez de ABCDabcd. <p> <img placement="break" id="image_DD98A3BEC0EC44EB82D877238F02F588" src="assets/sort_by_621.png" /> </p> </td> 
+   <td colname="col2"> Os nomes classificados na bancada agora são insensíveis ao caso do caractere, classificando alfabeticamente AaBbCcDd em vez de ABCDabcd . <p> <img placement="break" id="image_DD98A3BEC0EC44EB82D877238F02F588" src="assets/sort_by_621.png" /> </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> Pesquisando dimensões com base na dimensão pai. </td> 
@@ -38,7 +40,7 @@ O Análise de big data 6.2.1 inclui estes novos recursos:
   </tr> 
   <tr> 
    <td colname="col1"> Caixa de diálogo solicitando a inicialização de um aplicativo externo. </td> 
-   <td colname="col2"> <p>Agora, você verá uma caixa de diálogo na primeira vez que tentar abrir um aplicativo externo na Análise de big data. </p> <p>Por exemplo, se você abrir um arquivo de texto no Bloco de notas, receberá a seguinte mensagem. </p> <img placement="break" id="image_B4F2EB65B8ED4A5F97BF627E41F6E3E8" src="assets/open_exe_621.png" /> <p>Essa ação também criará um arquivo local de nome <span class="filepath">InsightSES.dat</span>, dentro da pasta de instalação do cliente. </p> </td> 
+   <td colname="col2"> <p>Agora você verá uma caixa de diálogo na primeira vez que tentar abrir um aplicativo externo no Data Workbench. </p> <p>Por exemplo, se você abrir um arquivo de texto no Bloco de notas, aparecerá a seguinte mensagem. </p> <img placement="break" id="image_B4F2EB65B8ED4A5F97BF627E41F6E3E8" src="assets/open_exe_621.png" /> <p>Essa ação também criará um arquivo local de nome <span class="filepath">InsightSES.dat</span>, dentro da pasta de instalação do cliente. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> Da Barra de ferramentas para Botões </td> 
@@ -46,17 +48,16 @@ O Análise de big data 6.2.1 inclui estes novos recursos:
   </tr> 
   <tr> 
    <td colname="col1"> Opções de redefinição na Pontuação de propensão e Árvores de decisão atualizadas </td> 
-   <td colname="col2"> In the <a href="https://docs.adobe.com/content/help/en/data-workbench/using/client/analysis-visualizations/visitor-propensity/c-visitor-propensity.html" format="http" scope="external"> Propensity Scoring </a> ( <span class="filepath"> Tools &gt; Predictive Analytics &gt; Propensity Score </span>) and the <a href="https://docs.adobe.com/content/help/en/data-workbench/using/client/analysis-visualizations/decision-trees/c-decision-trees.html" format="http" scope="external"> Decision Tree </a> ( <span class="filepath"> Visualizations &gt; Predictive Analytics &gt; Classifications &gt; Decision Tree Builder </span>) visualizations, you now have two reset options: <p><b>Redefinir modelos</b>: limpa o modelo mas mantém as configurações e entradas. Torna o botão <b>Ir</b> selecionável. </p> <p><b>Redefinir tudo</b>— Redefine todas as configurações (como no design anterior). </p> </td> 
+   <td colname="col2"> Nas visualizações de <a href="https://experienceleague.adobe.com/docs/data-workbench/using/client/analysis-visualizations/visitor-propensity/c-visitor-propensity.html" format="http" scope="external"> Pontuação de propensão </a> ( <span class="filepath"> Ferramentas &gt; Análise preditiva &gt; Pontuação de propensão </span>) e <a href="https://experienceleague.adobe.com/docs/data-workbench/using/client/analysis-visualizations/decision-trees/c-decision-trees.html" format="http" scope="external"> Árvore de decisão </a> ( <span class="filepath"> Visualizações &gt; Análises preditivas &gt; Classificações &gt; Construtor da árvore de decisão </span>), agora você tem duas opções de redefinição: <p><b>Redefinir modelos</b>: limpa o modelo mas mantém as configurações e entradas. Torna o botão <b>Ir</b> selecionável. </p> <p><b>Redefinir tudo</b> — Redefine todas as configurações (como no design anterior). </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
 ## Correções de erros {#section-8704a9ac358246cd81233dd0982d534f}
 
-* Os arquivos **[!UICONTROL Browsers]** e de **[!UICONTROL Operating Systems]** pesquisa não serão atualizados dentro do **[!UICONTROL Traffic]** perfil herdado (por exemplo, [!DNL Lookups\Traffic\Browsers.txt)]. Instead, configuration of the **[!UICONTROL Traffic]** profile will utilize the DeviceAtlas bundle ( [!DNL Lookups\DeviceAtlas\DeviceAtlas.bundle]) to provide this configuration information.
+* Os arquivos de pesquisa **[!UICONTROL Browsers]** e **[!UICONTROL Operating Systems]** não serão atualizados dentro do perfil herdado **[!UICONTROL Traffic]** (por exemplo, [!DNL Lookups\Traffic\Browsers.txt)]. Em vez disso, a configuração do perfil **[!UICONTROL Traffic]** utilizará o pacote DeviceAtlas ( [!DNL Lookups\DeviceAtlas\DeviceAtlas.bundle]) para fornecer essas informações de configuração.
 * O Análise de big data 6.2.1 será a última versão a oferecer o download de um aplicativo de 32 bits. Todos os futuros downloads de aplicativos do cliente deverão ter 64 bits, e será necessário o Windows 7 ou versão mais recente. Limitações de memória do aplicativo de 32 bits são endereçadas com a introdução do aplicativo de 64 bits, a começar pela versão 6.1.
 
    >[!NOTE]
    >
-   >A versão de 32 bits do aplicativo cliente Análise de big data pode apresentar possíveis problemas relacionados às limitações de memória ao executar modelos preditivos usando os recursos de agrupamento e pontuação.
-
+   >A versão de 32 bits do aplicativo cliente Data Workbench pode apresentar possíveis problemas relacionados às limitações de memória ao executar modelos preditivos usando os recursos de cluster e pontuação.
