--- a/help/home/c-release-notes-insight/c-6-3/c-6-3.md
+++ b/help/home/c-release-notes-insight/c-6-3/c-6-3.md
@@ -1,19 +1,18 @@
 ---
-description: As notas de versão da Data Workbench 6.3 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
+description: As notas de versão do Data Workbench 6.3 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
 title: Notas de versão do Data Workbench 6.3
 uuid: a8db4c11-f821-4d14-90d4-5194e58c50c1
-translation-type: tm+mt
-source-git-commit: 7e8b228c545fafcf8183d7fe68102cadde138146
+exl-id: c6a45e89-f5dc-4321-adb3-8e118be9dde0
+source-git-commit: 232117a8cacaecf8e5d7fcaccc5290d6297947e5
 workflow-type: tm+mt
-source-wordcount: '1687'
+source-wordcount: '1683'
 ht-degree: 6%
 
 ---
 
-
 # Notas de versão do Data Workbench 6.3{#data-workbench-release-notes}
 
-As notas de versão da Data Workbench 6.3 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
+As notas de versão do Data Workbench 6.3 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
 
 ## Novos recursos {#section-1225066ea8f44cf68e42e019d0bca816}
 
@@ -29,19 +28,19 @@ A Data Workbench 6.3 inclui estes novos recursos:
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-attribution-profiles/c-attrib-algorithmic/c-attrib-algorithmic.md"> Atribuição de melhor ajuste </a> </td> 
-   <td colname="col2"> A Atribuição de melhor ajuste fornece uma abordagem de aprendizado de máquina para determinar os níveis variados de influência que as interações do cliente contribuem para um evento de conversão bem-sucedido e, em seguida, atribui o nível de atribuição apropriado a cada evento. A Atribuição de melhor ajuste permite avaliar os toques em uma janela de tempo antes do evento de conversão bem-sucedido ocorrer e, em seguida, emprega o algoritmo de Data Workbench para criar um modelo de atribuição com base nos seus dados com resultados específicos às suas campanhas de marketing e fluxo de trabalho interno. </td> 
+   <td colname="col2"> A Atribuição de melhor ajuste fornece uma abordagem de aprendizado automatizado para determinar os diferentes níveis de influência que as interações do cliente contribuem para um evento de conversão bem-sucedido e, em seguida, atribui o nível de atribuição apropriado a cada evento. A Atribuição de melhor ajuste permite avaliar toques por uma janela de tempo antes que o evento de conversão bem-sucedido tenha ocorrido e, em seguida, emprega o algoritmo do Data Workbench para criar um modelo de atribuição com base nos dados, com resultados específicos às campanhas de marketing e ao fluxo de trabalho interno. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-exp-data-seg-exp/c-mmp-integration.md"> Integração com o Master Marketing Profile </a> </td> 
-   <td colname="col2"> Compartilhe segmentos ricos de clientes criados em Data Workbench com a Adobe Experience Cloud. Integrating with Profiles and Audiences enables the <a href="https://www.adobe.com/solutions/digital-marketing.html?promoid=KLXLZ" format="https" scope="external"> Adobe Experience Cloud </a> and other Adobe Analytic capabilities the opportunity to leverage rich audience segments created in Data Workbench. Isso requer que você tenha o Experience Cloud configurado e em execução. <p>A integração com o Experience Cloud Principal permite que você execute recursos preditivos como agrupamento ou pontuação de propensão e, em seguida, envie segmentos para o Adobe Experience Cloud ou outros produtos maiores, como Adobe Target e Adobe Experience Manager. </p> </td> 
+   <td colname="col2"> Compartilhe com a Adobe Experience Cloud segmentos avançados de clientes criados no Data Workbench. A integração com perfis e públicos-alvo permite que o <a href="https://www.adobe.com/solutions/digital-marketing.html?promoid=KLXLZ" format="https" scope="external"> Adobe Experience Cloud </a> e outros recursos do Adobe Analytics aproveitem os segmentos avançados de público-alvo criados no Data Workbench. Isso requer que o Experience Cloud esteja configurado e em execução. <p>A integração com o Experience Cloud Principal permite que você execute recursos preditivos como o clustering ou a pontuação de propensão e, em seguida, envie segmentos para a Adobe Experience Cloud ou outros produtos maiores, como Adobe Target e Adobe Experience Manager. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-exp-data-seg-exp/c-segment-export.md#concept-ac18fdb34edc4b9592130ab98fabd05e"> Opções de formato para exportação de arquivo </a> </td> 
-   <td colname="col2"> Added industry-standard format options for segments for direct integration with other capabilities, such as <b>R</b>, without additional file manipulation. Isso oferece um fluxo de trabalho contínuo e uma análise mais rápida. </td> 
+   <td colname="col2"> Adição de opções de formato padrão do setor para segmentos para integração direta com outros recursos, como <b>R</b>, sem manipulação de arquivo adicional. Isso oferece um fluxo de trabalho contínuo e uma análise mais rápida. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-analysis-vis/c-visitor-cluster/c-clustering-2.md"> Geração de cluster 2.0 </a> </td> 
-   <td colname="col2"> Includes a new <span class="filepath"> KMeans++ </span> algorithm ( <span class="filepath"> KMeans </span> is currently supported) that uses a faster approach to finding centers for an expedited cluster-generation process. </td> 
+   <td colname="col2"> Inclui um novo algoritmo <span class="filepath"> KMeans+ </span> ( <span class="filepath"> KMeans </span> é atualmente suportado) que usa uma abordagem mais rápida para encontrar centros para um processo acelerado de geração de cluster. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-analysis-vis/c-graphs/c-trend-lines.md#concept-2898b2ef97dc4762bda7df292713e9a2"> Linhas de tendência </a> </td> 
@@ -53,42 +52,42 @@ A Data Workbench 6.3 inclui estes novos recursos:
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-analysis-vis/c-chord-visualization.md#concept-ca600beb11674f3bb2696edf41f1dda9"> Exibição de corda </a> </td> 
-   <td colname="col2"> The Chord Visualization provides another view of the <a href="https://docs.adobe.com/content/help/en/data-workbench/using/client/analysis-visualizations/correlation-analysis/c-correlation-analysis.html" format="http" scope="external"> Correlation Matrix </a>. </td> 
+   <td colname="col2"> A Visualização de corda fornece outra visualização da <a href="https://experienceleague.adobe.com/docs/data-workbench/using/client/analysis-visualizations/correlation-analysis/c-correlation-analysis.html" format="http" scope="external"> Matriz de correlação </a>. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-admin-intrf/c-query-que/c-query-string-grouping.md"> Agrupamento de sequência de consulta </a> </td> 
-   <td colname="col2"> Se você tiver muitos campos com evars, props e variáveis personalizadas, durante o processamento de log você pode criar um par de valores de nome para combinar campos em um relatório. </td> 
+   <td colname="col2"> Se você tiver muitos campos com evars, props e variáveis personalizadas, durante o processamento de log é possível criar um par de valores de nome para combinar campos em um relatório. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-analysis-vis/c-latency.md#concept-a18c23d45af0460ba531f94da0cdfe6a"> Análise de latência </a> </td> 
-   <td colname="col2"> A visualização Latência permite analisar o comportamento latente do cliente em um número definido de dias antes ou depois que um evento ocorreu após uma campanha ou outro tipo de evento. </td> 
+   <td colname="col2"> A visualização de Latência permite analisar o comportamento latente do cliente em um conjunto de dias antes ou depois de um evento ocorrer após uma campanha ou outro tipo de evento. </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <b>Dimensão de tempo</b> </td> 
-   <td colname="col2"> In the Finders panel, you can now right-click on the <span class="uicontrol"> Dimensions </span> tab and select <span class="uicontrol"> Dimension Type &gt; Time </span>. Uma lista de dimensões de tempo será exibida nos resultados da pesquisa. <p> <img placement="break" id="image_BA6A577501A74088B55A881554C89F10" src="assets/time_dim.png" /> </p> </td> 
+   <td colname="col1"> <b></b> Timedimension </td> 
+   <td colname="col2"> No painel Localizadores, agora é possível clicar com o botão direito do mouse na guia <span class="uicontrol"> Dimension </span> e selecionar <span class="uicontrol"> Tipo de Dimension &gt; Tempo </span>. Uma lista de dimensões de tempo será exibida nos resultados da pesquisa. <p> <img placement="break" id="image_BA6A577501A74088B55A881554C89F10" src="assets/time_dim.png" /> </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <b>Bloquear</b> recurso </td> 
-   <td colname="col2"> O novo recurso <b>Bloquear</b> exibe um ícone na barra de ferramentas quando um espaço de trabalho está bloqueado. Você pode desbloquear o espaço de trabalho clicando no menu <b>Adicionar</b> e, em seguida, clicando em Desbloquear <b></b>temporariamente. </td> 
+   <td colname="col1"> <b></b> Recurso de bloqueio </td> 
+   <td colname="col2"> O novo recurso <b>Bloquear</b> exibe um ícone na barra de ferramentas quando um espaço de trabalho é bloqueado. Você pode desbloquear o espaço de trabalho clicando no menu <b>Add</b> e clicando em <b>Desbloquear temporariamente</b>. </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> Operadores lógicos e novos recursos de métrica no painel <b>Filtro </b> </td> 
-   <td colname="col2"> Os operadores lógicos E/OU foram adicionados ao Painel <b></b>de Filtro, permitindo que você participe ou adicione métricas ao filtrar dados. À medida que você altera as métricas, a porcentagem de filtro se ajusta e é exibida de acordo. </td> 
+   <td colname="col1"> Operadores lógicos e novos recursos de Métrica no <b>Painel de filtro </b> </td> 
+   <td colname="col2"> Operadores lógicos E/OU foram adicionados ao <b>Painel de Filtro</b>, permitindo que você participe ou adicione métricas ao filtrar dados. À medida que você altera métricas, a Porcentagem de filtro é ajustada e exibida de acordo. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> Atalhos de teclado </td> 
-   <td colname="col2"> Os novos atalhos de teclado na Data Workbench permitem navegar pela área de trabalho principal e por áreas de trabalho individuais usando as teclas de seta. Além disso, a barra de ferramentas do espaço de trabalho agora é exibida na janela de trabalho superior. </td> 
+   <td colname="col2"> Os novos atalhos de teclado no Data Workbench permitem navegar pela bancada principal e por espaços de trabalho individuais usando as teclas de seta. Além disso, a barra de ferramentas do espaço de trabalho agora é exibida na janela de trabalho superior. </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> Suporte ao Windows 8.1 </td> 
-   <td colname="col2"> O Microsoft Windows 8.1 de 64 bits <a href="https://docs.adobe.com/content/help/pt-BR/data-workbench/using/install/c-data-workbench-client-install.html" format="https" scope="external"> agora é compatível </a> com a instalação do cliente. </td> 
+   <td colname="col1"> Suporte para Windows 8.1 </td> 
+   <td colname="col2"> O Microsoft Windows 8.1 de 64 bits é <a href="https://experienceleague.adobe.com/docs/data-workbench/using/install/c-data-workbench-client-install.html?lang=pt-BR" format="https" scope="external"> agora compatível </a> para instalação cliente. </td> 
   </tr> 
  </tbody> 
 </table>
 
 ## Requisitos de atualização e Recommendations {#section-8704a9ac358246cd81233dd0982d534f}
 
-Os novos perfis para Data Workbench estão localizados no perfil **Software e Documentos** em
+Novos perfis para o Data Workbench estão localizados no perfil **Software e documentos** em
 
 ```
 Profiles - Current\DataWorkBench\ 
@@ -101,12 +100,12 @@ Profiles - Current\DataWorkBench\
 
 >[!NOTE]
 >
->Se você personalizou perfis que têm precedência sobre os arquivos padrão fornecidos no [!DNL Base] pacote, será necessário atualizar esses arquivos personalizados:
+>Se você tiver personalizado perfis que têm prioridade sobre os arquivos padrão fornecidos no pacote [!DNL Base], será necessário atualizar esses arquivos personalizados:
 
-* **Atualize o arquivo** Meta.cfg ( [!DNL E:\..\Profiles\<your custom profile>\Context\meta.cfg)]para definir a criptografia de senha atualizada para a Unidade de Sistema de Arquivos (servidor FSU) e adicione entradas para as transformações do campo Nomear Valor para aproveitar o Agrupamento [de Sequências de Caracteres de](../../../home/c-get-started/c-admin-intrf/c-query-que/c-query-string-grouping.md)Query.
+* **Atualize o arquivo Meta.cfg**  (  [!DNL E:\..\Profiles\<your custom profile>\Context\meta.cfg)]para definir a criptografia de senha atualizada para a Unidade do Sistema de Arquivos (servidor FSU) e para adicionar entradas para as transformações do Par de Valor do Nome para aproveitar o Agrupamento de Sequência de  [Consulta](../../../home/c-get-started/c-admin-intrf/c-query-que/c-query-string-grouping.md).
 
-   1. Abra o [!DNL meta.cfg] arquivo no FSU.
-   1. Altere o tipo de dados para **[!UICONTROL Proxy Password]** de &quot; [!DNL string"] para &quot; [!DNL EncryptedString]&quot; na seção Configuração *da* estação de trabalho.
+   1. Abra o arquivo [!DNL meta.cfg] no FSU.
+   1. Altere o tipo de dados para **[!UICONTROL Proxy Password]** de &quot; [!DNL string"] para &quot; [!DNL EncryptedString]&quot; na seção *Configuração da estação de trabalho*.
 
       ```
       Proxy User Name = string: 
@@ -114,27 +113,27 @@ Profiles - Current\DataWorkBench\
       Use Address File = bool: true
       ```
 
-   1. Adicione novas entradas para ativar as novas transformações do campo Nomear valor: *BuildNameValuePair* e *ExtractNameValuePairs*.
+   1. Adicione novas entradas para ativar as novas transformações do Par de Valor de Nome: *BuildNameValuePair* e *ExtractNameValuePairs*.
 
-      Abra um espaço de trabalho e clique com o botão direito do mouse em **Admin** > Gerenciador **de** Perfis.
+      Abra um espaço de trabalho e clique com o botão direito do mouse em **Admin** > **Gerenciador de perfis**.
 
-      Em **Contexto**, clique no arquivo **meta.cfg** na coluna **Base** e clique em **Tornar local**. Na coluna Tabela do usuário, clique com o botão direito do mouse e selecione **Abrir** > **na estação de trabalho**.
+      Em **Contexto**, clique no arquivo **meta.cfg** na coluna **Base** e clique em **Tornar Local**. Na coluna Tabela do usuário , clique com o botão direito do mouse e selecione **Abrir** > **na estação de trabalho**.
 
       ![](assets/meta_cfg.png)
 
-      * Na nova janela, clique em **metadados** e adicione modelos filhos aceitáveis.
+      * Na nova janela, clique em **metadata** e adicione modelos secundários aceitáveis.
 
       ![](assets/meta_cfg_child.png)
 
-      * Abra a **transformação** e adicione novos modelos.
+      * Abra **transformation** e adicione novos templates.
 
       ![](assets/meta_cfg_template.png)
 
 
 
-* **Atualização para melhorias** da Fast Merge. Adicione parâmetros ou altere valores aos seguintes arquivos de configuração para aproveitar as melhorias de velocidade na Data Workbench durante uma transformação.
+* **Atualização para melhorias na Fast Merge**. Adicione parâmetros ou altere valores para os seguintes arquivos de configuração para aproveitar as melhorias de velocidade no Data Workbench durante uma transformação.
 
-   * **Communications.cfg** ([!DNL E:\Server\Components\Communications.cfg])
+   * **Communications.cfg**  ([!DNL E:\Server\Components\Communications.cfg])
 
       ```
       18 = SourceListServer:  
@@ -142,7 +141,7 @@ Profiles - Current\DataWorkBench\
           Listing Interval = int: 10 (new)
       ```
 
-   * **Disk Files.cfg** (em [!DNL E:\Server\Components] e [!DNL E:\Server\Components for Processing Servers])
+   * **Disk Files.cfg**  (at  [!DNL E:\Server\Components] e  [!DNL E:\Server\Components for Processing Servers])
 
       ```
       Disk Cache Size (MB) = double: 1024 (from double: 256) 
@@ -177,21 +176,20 @@ Profiles - Current\DataWorkBench\
       >[!NOTE]
       >
       >* Para aproveitar os aprimoramentos de Fast Merge, verifique se você tem pelo menos 8 GB de RAM por DPU.
-      >* O Intervalo de salvamento, a duração entre o conjunto de dados salva, pode precisar ser reduzido se os novos parâmetros do Modo de processamento de log forem aplicados. Como a Transformação será concluída mais rapidamente, o arquivo de estado do conjunto de dados conterá mais dados entre Salvar intervalos em comparação com as versões anteriores.
+      >* O Intervalo de salvamento, a duração entre as salvas do conjunto de dados, pode precisar ser reduzido se os novos parâmetros do Modo de processamento de log forem aplicados. Como a transformação será concluída mais rápido, o arquivo de estado do conjunto de dados conterá mais dados entre Salvar intervalos em comparação com versões anteriores.
 
       >
-      >  **É recomendável reduzir a configuração Salvar intervalo para 1800 segundos (30 minutos)**— o intervalo de salvamento padrão é de 3600 segundos (1 hora). (Se essa linha precisar ser adicionada ao [!DNL Log Processing Mode.cfg], observe que há dois (2) espaços à esquerda).
+      >  **É recomendável reduzir a configuração Salvar intervalo para 1800 segundos (30 minutos)**; o padrão Salvar intervalo é 3600 segundos (1 hora). (Se essa linha precisar ser adicionada ao [!DNL Log Processing Mode.cfg], observe que há dois (2) espaços à esquerda).
       >
       >  
       ```
       >      Save Interval (sec) = int: 1800
       >  ```
       >
-      >  * É recomendável que os novos parâmetros do Modo de Processamento de Log não sejam aplicados a um conjunto de dados configurado com uma **CrossRows** usando a operação **All** . Com essas configurações, o uso de memória para esta operação pode se tornar muito grande para o ambiente.
+      >  * É recomendável que os novos parâmetros do Modo de processamento de log não sejam aplicados a um conjunto de dados configurado com uma **CrossRows** usando a operação **All**. Com essas configurações, o uso de memória para essa operação pode se tornar muito grande para o ambiente.
 
 
-
-* **Atualização** de integração do Adobe Target com DWB. Um novo arquivo de exportação [!DNL ExportIntegration.exe]substitui o [!DNL TnTSend.exe] arquivo existente no Insight Server ( [!DNL E:\Server\Scripts\TnTSend.exe]). Este novo arquivo de exportação suporta integração e coordenação da Adobe Target com o novo Perfil de Marketing Principal (MMP) e Adobe Audience Manager.
+* **Atualização da integração do Adobe Target com DWB**. Um novo arquivo de exportação, [!DNL ExportIntegration.exe], substitui o arquivo [!DNL TnTSend.exe] existente no Servidor Insight ( [!DNL E:\Server\Scripts\TnTSend.exe]). Esse novo arquivo de exportação oferece suporte à integração e coordenação do Adobe Target com o novo MMP (Principal Marketing Profile) e Adobe Audience Manager.
 
    Você precisará atualizar os seguintes comandos para exportações do Adobe Target.
 
@@ -212,15 +210,15 @@ Profiles - Current\DataWorkBench\
    >
    >Você também pode tentar o seguinte para utilizar o processo de exportação antigo:
    >    
-   >* Crie um novo teste e exportação de Público alvo na estação de trabalho.
-   >* Modifique a antiga exportação de teste e Público alvo encontrada em Server/Perfis/`<your profile>`/Export.
+   >* Crie uma nova exportação de Test&amp;Target na estação de trabalho.
+   >* Modifique a exportação antiga do Test and Target encontrada em Server/Profiles/`<your profile>`/Export.
 
 
-* **Atualize o perfil Adobe SC.** As alterações no [!DNL Exclude Hit.cfg] arquivo exigem que um campo seja declarado no [!DNL Decoding Instructions.cfg] arquivo associado.
+* **Atualize o perfil do Adobe SC.** As alterações no  [!DNL Exclude Hit.cfg] arquivo exigem que um campo seja declarado no  [!DNL Decoding Instructions.cfg] arquivo associado.
 
    >[!NOTE]
    >
-   >Se o perfil Adobe SC incluir um arquivo personalizado, será necessário incluir um [!DNL Decoding Instructions.cfg] [!DNL DelimitedDecoder] parâmetro ao arquivo personalizado.
+   >Se o seu perfil do Adobe SC incluir um arquivo [!DNL Decoding Instructions.cfg] personalizado, será necessário incluir um parâmetro [!DNL DelimitedDecoder] no arquivo personalizado.
 
    ```
    0 = DelimitedDecoder: 
@@ -233,15 +231,15 @@ Profiles - Current\DataWorkBench\
    5 = string: x-hit_source
    ```
 
-   Adicionar o [!DNL DelimitedDecoder] campo permite aproveitar as atualizações de recursos e evitar possíveis problemas de processamento de log resultantes dessas atualizações.
+   Adicionar o campo [!DNL DelimitedDecoder] permite aproveitar as atualizações de recursos e evitar possíveis problemas de processamento de log resultantes dessas atualizações.
 
-**Cliente de Atualização:**
+**Cliente de atualização:**
 
 * **Atualize seu cliente do servidor**.
 
-   Depois que o servidor for atualizado, o cliente poderá atualizar automaticamente se o [!DNL Insight.cfg] arquivo estiver configurado corretamente:
+   Depois que o servidor for atualizado, o cliente poderá atualizar automaticamente se o arquivo [!DNL Insight.cfg] estiver configurado corretamente:
 
-   1. Edit the [!DNL Insight.cfg] file.
+   1. Edite o arquivo [!DNL Insight.cfg].
 
       ```
       Update Software = bool: true
@@ -252,7 +250,7 @@ Profiles - Current\DataWorkBench\
    1. Saia e inicie o cliente.
    1. Conecte-se ao perfil.
 
-      O cliente atualizará automaticamente para a Data Workbench 6.3.
+      O cliente atualizará automaticamente para o Data Workbench 6.3.
 
    1. Saia do cliente.
    1. Editar [!DNL Insight.cfg]
@@ -261,18 +259,18 @@ Profiles - Current\DataWorkBench\
 
          para [!DNL Proxy Password = EncryptedString:]
 
-         Remova o valor do Endereço proxy e da Senha do proxy anteriores.
+         Remova o valor do endereço proxy e da senha de proxy anteriores.
 
       * **[!UICONTROL Save]**.
    1. Inicie o cliente.
    1. Editar [!DNL Insight.cfg].
 
-      * Insira a senha do proxy para todos os servidores e Salvar.
-      * Insira o endereço proxy para todos os servidores e Salvar.
+      * Insira a Senha de Proxy para todos os servidores e Salve.
+      * Insira o endereço de proxy para todos os servidores e salve.
 
          >[!IMPORTANT]
          >
-         >O Endereço proxy e a Senha do proxy devem ser inseridos e salvos no cliente.
+         >O Endereço Proxy e a Senha Proxy devem ser inseridos e salvos no cliente.
    1. Conecte-se ao perfil.
    >[!NOTE]
    >
@@ -280,10 +278,10 @@ Profiles - Current\DataWorkBench\
    >    
    >    
    >    * Siga a sequência exata de atualização para evitar um bloqueio de conta. Se a conta estiver bloqueada, execute todas as alterações necessárias na sequência exata listada, salve o trabalho e saia do cliente. Aguarde o bloqueio ser lançado (cerca de 45 minutos) e inicie o cliente novamente.
-   >    * A modificação de senha deve ser executada no cliente somente devido ao fato de as senhas serem salvas no Cofre de Credenciais do Windows.
+   >    * A modificação de senha deve ser executada no cliente somente porque as senhas são salvas no Cofre de Credenciais do Windows.
 
 
-* **Recomendação**: **Novos Temas Aero do Windows. ** Atualize a aparência do seu aplicativo cliente usando os Temas Aero do Windows.
+* **Recomendação**: **Novos temas do Windows Aero. ** Atualize a aparência do seu aplicativo cliente usando os Temas do Windows Aero.
 
 * **Recomendação: Fontes para versões** em chinês e japonês:
 
@@ -302,7 +300,7 @@ Profiles - Current\DataWorkBench\
 
    >[!NOTE]
    >
-   >*SimSun* pode ser usado para chinês e japonês. Se estiver tentando gravar caracteres de meio byte em japonês, também é necessário incluir o *MS Mincho*. Para ativar essas fontes no, [!DNL Insight.cfg]é possível adicionar esses parâmetros.
+   >** SimSuncan pode ser usado para chinês e japonês. Se estiver tentando gravar caracteres de meio byte em japonês, também é necessário incluir *MS Mincho*. Para ativar essas fontes em [!DNL Insight.cfg], você pode adicionar esses parâmetros.
 
    ```
    0 = string: Arial 
@@ -312,35 +310,35 @@ Profiles - Current\DataWorkBench\
 
    Essas fontes devem ser listadas no arquivo de configuração da estação de trabalho: [!DNL Insight.cfg.]
 
-**Atualizar para Adobe Analytics Premium**
+**Atualizar para o Adobe Analytics Premium**
 
-Para executar a Atribuição **de** melhor ajuste na Data Workbench, você precisa receber novos certificados do Adobe ClientCare para seu Cliente, Servidor e Servidor de relatórios (arquivos .pem) para suportar o Adobe Analytics Premium. Cada um dos novos certificados terá este parâmetro:
+Para executar a **Atribuição de melhor ajuste** no Data Workbench, você precisa receber novos certificados do Adobe ClientCare para seu cliente, servidor e servidor de relatórios (arquivos .pem) para oferecer suporte ao Adobe Analytics Premium. Cada um dos novos certificados terá este parâmetro:
 
 ```
 Product = Premium
 ```
 
-O pacote Premium está disponível para download **[!UICONTROL Software and Docs]** na guia **[!UICONTROL Getting Started]** na área de trabalho de arquivos de pesquisa e **Perfis** . Navigate to `Profiles - Current\DataWorkBench\<language>\Data WorkBench_6.30-en-us\Premium_6.30_en-us.zip`.  Depois que o perfil **Premium** for carregado no servidor, será necessário adicionar um parâmetro *Premium* ao seu [!DNL Profile.cfg] arquivo personalizado. Isso permite que seu perfil personalizado inclua menus, visualizações e espaços de trabalho como parte do Adobe Analytics Premium.
+O Pacote Premium está disponível para download em **[!UICONTROL Software and Docs]** na guia **[!UICONTROL Getting Started]** no espaço de trabalho de arquivos **Profiles and Lookup**. Navegue até `Profiles - Current\DataWorkBench\<language>\Data WorkBench_6.30-en-us\Premium_6.30_en-us.zip`.  Depois que o perfil **Premium** for carregado no servidor, será necessário adicionar um parâmetro *Premium* ao arquivo personalizado [!DNL Profile.cfg]. Isso permite que o perfil personalizado inclua menus, visualizações e espaços de trabalho como parte do Adobe Analytics Premium.
 
 ## Erros corrigidos {#section-e1e3df3da3594987a325344cd5e8b855}
 
-* Corrigido o problema no qual a visualização do Mapa de **densidade** não possuía os elementos maiores.
-* Corrigido o problema no **Mapa** de densidade onde a área de elementos não retratava a proporção do valor da métrica.
-* Corrigido o problema no qual arrastar a métrica do **[!UICONTROL Finders]** painel para a legenda da métrica fora da coluna da métrica excluía a legenda do espaço de trabalho.
-* Foi corrigido um problema em que **[!UICONTROL Print Workspace]** o uso **[!UICONTROL Sidebar]** e **[!UICONTROL Both]** as opções não incluíam as informações de direitos autorais na página impressa.
+* Correção de um problema em que a visualização do **Density Map** não possuía os elementos maiores.
+* Correção de um problema no **Density Map** em que a área dos elementos não retornava a proporção do valor da métrica.
+* Correção de um problema em que arrastar a métrica do painel **[!UICONTROL Finders]** para a legenda da métrica fora da coluna de métrica excluía a legenda do espaço de trabalho.
+* Correção de um problema em que **[!UICONTROL Print Workspace]** usando as opções **[!UICONTROL Sidebar]** e **[!UICONTROL Both]** não incluíam as informações de Direitos autorais na página impressa.
 
 ## Problemas conhecidos {#section-751e8698e9f14b75a85f63253782be41}
 
-* Os usuários das placas gráficas **** AMD Radeon™ devem atualizar para os drivers gráficos mais recentes. Algumas versões anteriores do driver alegam que são compatíveis com o openGL 3.2, mas são inconsistentes.
-* A saída gerada pela configuração de Exportação **de** segmento sem uma declaração de cabeçalho pode resultar em um cabeçalho bogus exibido no início do arquivo que está em conflito com o primeiro conjunto de linhas.
-* **Adicionar Dimension** mostra apenas os Dimension ** estendidos. A solução alternativa é usar a ferramenta **Localizadores** para arrastar dimensões para tabelas.
+* Os usuários de **placas gráficas AMD Radeon™** devem atualizar para os drivers gráficos mais recentes. Algumas versões anteriores do driver alegam que elas suportam o openGL 3.2, mas são inconsistentes.
+* A saída gerada pela configuração **Segment Export** sem uma declaração de cabeçalho pode resultar em um cabeçalho de bogus exibido no início do arquivo, que está em conflito com o primeiro conjunto de linhas.
+* **Adicionar** dimensões mostra apenas as Dimension  *estendidas*. A solução alternativa é usar a ferramenta **Localizadores** para arrastar dimensões para tabelas.
 
-* Quando a Visualização de gráfico de dispersão 3D inclui avisos, o zoom pode exibir os gráficos fora da borda da visualização. Para contornar esse problema, faça zoom no Gráfico de dispersão 3D primeiro e, em seguida, adicione avisos à sua visualização.
-* O uso da estação de trabalho na sessão Área de trabalho remota travará ao renomear espaços de trabalho.
+* Quando a Visualização do Gráfico de Dispersão 3D inclui chamadas, o zoom pode exibir gráficos fora da borda da visualização. Para contornar esse problema, amplie o Gráfico de dispersão 3D primeiro e, em seguida, adicione chamadas à visualização.
+* O uso da estação de trabalho na sessão de Área de trabalho remota falhará ao renomear espaços de trabalho.
 * Listar item
-* **Os arquivos de exportação do segmento herdado são enviados com aspas** de duplo mesmo se o arquivo de exportação não contiver aspas no campo Formato de saída.
+* **Os arquivos de exportação de Segmento herdado são enviados com** aspas duplas, mesmo se o arquivo de exportação não contiver aspas no campo Formato de saída .
 
-   *Solução*: Adicione essas três linhas ao arquivo .export. A definição desses valores não acionará uma integração MMP (como outros campos de configuração são obrigatórios), mas ignorará as fugas automáticas indesejadas.
+   *Solução alternativa*: Adicione essas três linhas ao arquivo .export . A configuração desses valores não acionará uma integração MMP (como outros campos de configuração são necessários), mas ignorará escapamentos automáticos indesejados.
 
    ```
      MMP Configuration = MMPConfiguration: 
@@ -349,4 +347,4 @@ O pacote Premium está disponível para download **[!UICONTROL Software and Docs
                                        the current export]
    ```
 
-   (A primeira linha tem dois (2) espaços à esquerda e as linhas seguintes quatro (4). O Dimension da saída da exportação atual precisa ser referenciado no [!DNL MMP Visitor ID Field].)
+   (A primeira linha tem dois (2) espaços à esquerda e as próximas linhas (4). O Dimension da saída da exportação atual precisa ser referenciado no [!DNL MMP Visitor ID Field].)
